--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,10 @@ php:
   # aliased to a recent 5.6.x version
   - 5.6
 
+before_install:
+  - composer self-update
+  - composer install
+
 # omitting "script:" will default to phpunit
 # use the $DB env variable to determine the phpunit.xml to use
 script: phpunit
