--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ php:
   # aliased to a recent 5.6.x version
   - 5.6
 
-before_install:
+before_script:
   - composer self-update
   - composer install
 
